Fixed alignment issue on Safari and prevented word breaks on Korean words

--- a/css/main.css
+++ b/css/main.css
@@ -1,18 +1,21 @@
-body > :not(.pace),body:before,body:after {
-  -webkit-transition:opacity .4s ease-in-out;
-  -moz-transition:opacity .4s ease-in-out;
-  -o-transition:opacity .4s ease-in-out;
-  -ms-transition:opacity .4s ease-in-out;
-  transition:opacity .4s ease-in-out
+body >:not(.pace), body:before, body:after {
+  -webkit-transition: opacity .4s ease-in-out;
+  -moz-transition: opacity .4s ease-in-out;
+  -o-transition: opacity .4s ease-in-out;
+  -ms-transition: opacity .4s ease-in-out;
+  transition: opacity .4s ease-in-out
 }
 
-body:not(.pace-done) > :not(.pace),body:not(.pace-done):before,body:not(.pace-done):after {
-  opacity:0
+body:not(.pace-done) >:not(.pace), body:not(.pace-done):before, body:not(.pace-done):after {
+  opacity: 0
 }
+
 
 /*** Transcript Text Styles ***/
+
 span[class^="word"] {
   cursor: pointer;
+  margin: 5px;
 }
 
 span[class^="word"]:hover {
@@ -32,7 +35,7 @@ span[class^="line"]:nth-child(even) {
 
 span[class^="line"]:hover {
   background-color: rgb(225, 255, 222);
-  color:black;
+  color: black;
 }
 
 .highlight {
@@ -48,20 +51,17 @@ span[class^="line"]:hover {
   font-family: 'Nanum Gothic', sans-serif;
   color: slategrey;
   line-height: 220%;
-  text-transform: none;
   text-indent: 0ex;
   text-align: left;
-  letter-spacing: normal;
-  word-spacing: 0.5em;
-  text-decoration: none;
 }
-
 
 #cMain {
   padding: 20px
 }
 
+
 /*** Hide things until they're needed ***/
+
 .the_media_player_div {
   display: none;
 }
@@ -74,33 +74,38 @@ span[class^="line"]:hover {
   position: absolute;
   bottom: 0;
   background: rgb(42, 43, 48);
-  width:100%;
-  padding:20px;
-  color:black;
+  width: 100%;
+  padding: 20px;
+  color: black;
 }
 
 input#submit_definition_box {
   width: 70%;
 }
 
+
 /*** Left Sidebar ***/
 
 .main-sidebar {
-  height:100%;
+  height: 100%;
 }
 
-.sidebar-menu{
-  padding-bottom:20px;
+.sidebar-menu {
+  padding-bottom: 20px;
 }
+
 
 /*** Right Sidebar ***/
+
 .control-sidebar {
-  position:fixed;
+  position: fixed;
   height: 100%;
-  overflow:hidden;
+  overflow: hidden;
 }
 
+
 /*** Miscellaneous ***/
+
 a.dv_a_no_hover:hover {
   background: transparent !important;
 }
